# lms-fastapi

./: .gitignore  main.py  pyproject.toml
database/: db_setup.py
database/models/: users.py
db/: db_setup.py
endpoints/: courses.py  users.py
models/: courses.py  users.py
routes/: courses.py  users.py
utils/: api_versions.py  generate_slug.py  timestamp.py
