[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = "This is an entry for fastapi"
authors = ["Stephen Gbolagade <gbolabyte222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
